--- a/web/src/styles/_global.scss
+++ b/web/src/styles/_global.scss
@@ -87,3 +87,18 @@ table th {
   background-color: var(--black);
   color: var(--white);
 }
+
+kbd {
+  display: inline-block;
+  padding: 3px 5px;
+  font: 11px monospace;
+  line-height: normal;
+  line-height: 10px;
+  color: #24292f;
+  vertical-align: middle;
+  background-color: #f6f8fa;
+  border: solid 1px rgba(175, 184, 193, 0.2);
+  border-bottom-color: rgba(175, 184, 193, 0.2);
+  border-radius: 6px;
+  box-shadow: inset 0 -1px 0 rgba(175, 184, 193, 0.2);
+}
