--- a/web/src/styles/slides/_helpers.scss
+++ b/web/src/styles/slides/_helpers.scss
@@ -3,6 +3,10 @@
     text-align: start;
   }
 
+  .align-center {
+    text-align: center;
+  }
+
   .image-one-fourth {
     display: block;
     margin: 0 auto;
@@ -104,19 +108,6 @@
 
   .bg-white {
     color: var(--black);
-  }
-
-  .center.middle {
-    align-items: stretch;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    height: 100%;
-  }
-
-  .center.middle > * {
-    flex: 1 1 auto;
   }
 
   .logo {
