--- a/labs/feedr/starter-code/00-templating-codealong-1/css/style.css
+++ b/labs/feedr/starter-code/00-templating-codealong-1/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -5,17 +9,10 @@ body {
 .sessions {
   padding: 1em;
   display: inline-block;
-  background-color: #D8ECF2;
+  background-color: #d8ecf2;
   border-radius: 10px;
 }
-.sessions p {
-  margin: 0.2em;
-}
-.sessions .title {
-  font-size: 1.4em;
-  font-weight: bold;
-  margin-bottom: 0.5em;
-}
+
 .sessions .label {
   font-weight: bold;
 }
