--- a/labs/feedr/starter-code/01-templating-codealong-2/css/style.css
+++ b/labs/feedr/starter-code/01-templating-codealong-2/css/style.css
@@ -1,5 +1,5 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  box-sizing: border-box;
 }
 
 .sessions {
@@ -10,19 +10,12 @@ body {
 .session {
   padding: 1em;
   margin-bottom: 1em;
-  background-color: #D8ECF2;
+  background-color: #d8ecf2;
   border-radius: 10px;
   width: 30%;
   min-width: 400px;
 }
-.session p {
-  margin: 0.2em;
-}
-.session .title {
-  font-size: 1.4em;
-  font-weight: bold;
-  margin-bottom: 0.5em;
-}
+
 .session .label {
   font-weight: bold;
 }
