--- a/labs/feedr-1.5/starter-code/styles/style.css
+++ b/labs/feedr-1.5/starter-code/styles/style.css
@@ -1,60 +1,30 @@
 /* General styles */
-.container {
-  max-width: 1000px;
-  margin: 0 auto;
+
+* {
+  box-sizing: border-box;
 }
 
-#popUp {
-  opacity: 0.95;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #fff;
+:root {
+  --red: #fe052c;
+  --dark-red: #cc0020;
+  --white: #fff;
+  --dark-grey: #ccc;
+  --light-grey: #eee;
+  --black: #000;
+  --metal-blue: #097fb2;
+  --base-space: 1.25rem;
 }
 
-#popUp .closePopUp {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  font-size: 40px;
-  color: #fe052c;
-  text-decoration: none;
+html {
+  font-size: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#popUp.loader {
-  background-image: url(../images/ajax_loader.gif);
-  background-repeat: no-repeat;
-  background-position: center center;
-}
+/* Utilities */
 
-#popUp.loader .container {
+.hidden,
+[hidden] {
   display: none;
-}
-
-#popUp .container {
-  margin-top: 80px;
-}
-
-#popUp h1 {
-  margin-bottom: 0;
-}
-
-#popUp .popUpAction {
-  padding: 10px;
-  background-color: #fe052c;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 5px;
-  transform: 0.2s all;
-  margin-top: 30px;
-  display: inline-block;
-}
-
-#popUp .popUpAction:hover {
-  color: #fe052c;
-  background: #fff;
 }
 
 /* Header styles */
@@ -66,172 +36,202 @@ header {
   right: 0;
 }
 
+header .container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: var(--base-space);
+  align-items: center;
+}
+
 header h1 {
-  color: #fff;
-  padding: 10px 2%;
+  color: var(--white);
   margin: 0;
-  width: 16%;
-  float: left;
-  padding-left: 0;
 }
 
-/* Header navigation bar */
 header nav {
-  padding: 10px 2%;
-  width: 76%;
-  float: right;
-  text-align: right;
-  line-height: 30px;
-  margin-top: 0;
-  position: relative;
-  vertical-align: middle;
+  width: 33.33%;
 }
 
-/* Search bar */
-header #search {
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  right: 20px;
-  top: 10px;
-}
-
-header #search a {
-  display: block;
-  width: 100%;
-  padding: 10px;
-}
-
-header #search a:hover {
-  background: #cc0020;
-}
-
-header #search img {
-  width: 100%;
-  display: block;
-}
-
-header #search input {
-  position: absolute;
-  right: 20px;
-  /*top: 10px;*/
-  padding: 8px 0;
-  width: 0;
-  transition: 0.2s all;
-  visibility: hidden;
-}
-
-header #search.active input {
-  width: 160px;
-  padding: 8px 10px;
-  visibility: visible;
-}
-
-header #search.active a {
-  background: #cc0020;
-}
-
-header nav a {
-  display: block;
-  padding: 0 10px;
-  color: #fff;
-  font-size: 16px;
-  line-height: 40px;
-  text-decoration: none;
-  transition: 0.2s all;
-}
-
-header nav a:hover {
-  background-color: #fff;
-  color: #cc0020;
-}
-
-nav ul {
+header ul {
+  list-style: none;
   padding: 0;
   margin: 0;
-  margin-right: 30px;
-  list-style: none;
-  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
-nav ul li {
-  display: inline-block;
-  background-color: #cc0020;
-  position: relative;
+header form select {
+  color: var(--black);
+  background-color: var(--white);
+  border: 2px solid var(--white);
+  padding: 0.15em 0.25em;
 }
 
-nav ul ul {
-  display: none;
-  position: absolute;
-  top: 40px;
-  right: -30px;
+header form select:focus {
+  background-color: var(--light-grey);
+  border: 2px solid var(--light-grey);
 }
 
-/* Display Dropdowns on Hover */
-nav ul li:hover > ul {
-  display: inherit;
+header form button[type='submit'] {
+  appearance: none;
+  color: var(--black);
+  background-color: var(--white);
+  border: 2px solid var(--white);
+  padding: 0.15em 0.25em;
 }
 
-/* First Tier Dropdown */
-nav ul ul li {
-  width: 170px;
-  float: none;
-  display: list-item;
-  position: relative;
+header form input[type='search'] {
+  appearance: none;
+  color: var(--black);
+  background-color: var(--white);
+  border: 2px solid var(--white);
+  padding: 0.15em 0.25em;
+}
+
+header form button[type='submit']:hover,
+header form button[type='submit']:focus,
+header form input[type='search']:hover,
+header form input[type='search']:focus {
+  background-color: var(--light-grey);
+  border: 2px solid var(--light-grey);
+}
+
+header form button[type='submit']:active,
+header form input[type='search']:active {
+  color: var(--white);
+  background-color: var(--dark-red);
+  border: 2px solid var(--dark-red);
 }
 
 /* Main Section */
-#main {
-  margin-top: 65px;
+
+main.container {
+  margin-top: 5rem;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 /* Individual Article Styling */
 .article {
   border-bottom: 1px solid #ccc;
   transition: 0.2s all;
+  display: flex;
+  padding: 1.25rem;
 }
 
 .article:hover {
-  padding: 0 2%;
+  padding: 1.25rem calc(1.2 * 1.25rem);
   background-color: #eee;
 }
 
-.article .featuredImage {
-  width: 12%;
-  float: left;
-  margin: 1.5%;
+.article .featured-image {
+  width: 12.5%;
   max-width: 60px;
+  margin-right: 1.25rem;
 }
 
-.article .featuredImage img {
+.article .featured-image img {
   max-width: 100%;
-  border-radius: 50px;
+  border-radius: 50%;
 }
 
 .article .article-content {
   width: 70%;
-  float: left;
 }
 
 .article .article-content a {
   text-decoration: none;
 }
 
-.article .article-content h3 {
-  margin-bottom: 0;
+.article .article-content h2 {
+  margin-top: 0;
   color: #fe052c;
 }
 
-.article .article-content h6 {
-  margin-top: 0;
+.article .article-content h3 {
+  margin: 0;
   color: #666;
 }
 
 .article .impressions {
   width: 15%;
-  float: right;
   font-size: 30px;
   margin-top: 15px;
   text-align: right;
   color: #097fb2;
+}
+
+/* Pop up*/
+
+.pop-up {
+  opacity: 0.95;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+}
+
+.pop-up .close-popup {
+  position: absolute;
+  top: 1.25rem;
+  right: 1.25rem;
+  color: #fe052c;
+  text-decoration: none;
+  background-color: transparent;
+  border: 1px solid #ccc;
+}
+
+.pop-up .close-popup:hover,
+.pop-up .close-popup:focus {
+  color: white;
+  text-decoration: none;
+  background-color: #fe052c;
+  border: 1px solid #fe052c;
+}
+
+.pop-up .close-popup:active {
+  color: #fe052c;
+  text-decoration: none;
+  background-color: transparent;
+  border: 1px solid #ccc;
+}
+
+.pop-up.loader {
+  background-image: url(../images/ajax_loader.gif);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.pop-up.loader .container {
+  display: none;
+}
+
+.pop-up .container {
+  margin-top: 80px;
+}
+
+.pop-up h1 {
+  margin-bottom: 0;
+}
+
+.pop-up .pop-up-action {
+  padding: 10px;
+  background-color: #fe052c;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transform: 0.2s all;
+  margin-top: 30px;
+  display: inline-block;
+}
+
+.pop-up .pop-up-action:hover {
+  color: #fe052c;
+  background: #fff;
 }
